--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 </ul>
             </nav>
         </header>
+
+        <section id="hero">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+            <form id="form">
+                <input name="email" id="email" type="email" placeholder="Enter your email" required>
+                <input id="submit" type="submit" value="Submit" class="btn">
+            </form>
+        </section>
     </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
