add features section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@
                 <input id="submit" type="submit" value="Submit" class="btn">
             </form>
         </section>
+
+        <div class="container">
+            <section id="features">
+                <div class="grid">
+                    <div class="icon"><i class="fas fa-3x fa-seedling"></i></div>
+                    <div class="desc">
+                        <h2>Freshest Ingredients</h2>
+                        <p>Our ingredients are the most freshest of the fresh. Plucked from locally-sourced pastures in regions watered by the rainiest of rain.</p>
+                    </div>
+                </div>
+                <div class="grid">
+                    <div class="icon"><i class="fas fa-3x fa-lemon"></i></div>
+                    <div class="desc">
+                        <h2>From Root to Fruit</h2>
+                        <p>From the seedling to the tree, we care for these healthiest of plants till they are in our plant-product nourishing you to be the healthiest of humans.</p>
+                    </div>
+                </div>
+                <div class="grid">
+                    <div class="icon"><i class="fas fa-3x fa-leaf"></i></div>
+                    <div class="desc">
+                        <h2>Field to Fridge</h2>
+                        <p>We make certain that you receive your Plant-Product in a timely manner to ensure maximum freshness and health and the bestest of prices.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
