add how-it-works section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                     </div>
                 </div>
             </section>
+
+            <section id="how-it-works">
+                <!-- <iframe video here></iframe> -->
+            </section>
         </div>
     </div>
 
