add product cards

--- a/index.html
+++ b/index.html
@@ -60,6 +60,42 @@
             <section id="how-it-works">
                 <!-- <iframe video here></iframe> -->
             </section>
+
+            <section id="pricing">
+                <div class="product" id="for-one">
+                    <div class="size">Solo</div>
+                    <h2>$200</h2>
+                    <ul>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                    </ul>
+                    <button class="btn">Select</button>
+                </div>
+                <div class="product" id="for-two">
+                    <div class="size">Duo</div>
+                    <h2>$400</h2>
+                    <ul>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                    </ul>
+                    <button class="btn">Select</button>
+                </div>
+                <div class="product" id="for-family">
+                    <div class="size">Family</div>
+                    <h2>$600</h2>
+                    <ul>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                        <li>Lorem ipsum.</li>
+                    </ul>
+                    <button class="btn">Select</button>
+                </div>
+            </section>
         </div>
     </div>
 
