add footer and copyright

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
                     <button class="btn">Select</button>
                 </div>
             </section>
+
+            <footer>
+                <ul>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <span>Copyright 2021, Plant-Product &copy;</span>
+            </footer>
         </div>
     </div>
 
